--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,6 @@
 server {
     listen 80;
     server_name loto-ia.com www.loto-ia.com;
-    
-    # Redirect HTTP to HTTPS
     return 301 https://$server_name$request_uri;
 }
 
@@ -10,43 +8,19 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name loto-ia.com www.loto-ia.com;
+    
     ssl_certificate /etc/letsencrypt/live/loto-ia.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/loto-ia.com/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    merge_slashes off;
-    absolute_redirect off;
     
-    # Ajustes para HTTP/2
-    http2_max_field_size 16k;
-    http2_max_header_size 32k;
-    http2_idle_timeout 5m;
-    client_max_body_size 20M;
-                                 
-    # Ruta a los archivos estáticos
     root /var/www/tienda-web-lotoAI-1/dist/tienda-web-loto-ai/browser;
     index index.csr.html;
-    access_log /var/log/nginx/loto-ia.access.log;
-    error_log /var/log/nginx/loto-ia.error.log debug;
-    
-    # Configuración para archivos JSON (sin caché para datos dinámicos)
-    location ~* \.json$ {
-        expires 0;
-        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-        add_header Vary "Accept-Encoding, User-Agent";
-        try_files $uri =404;
-    }
     
     # Configuración para archivos estáticos
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1h;
+        expires 1y;
         add_header Cache-Control "public, no-transform";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-        add_header Vary "Accept-Encoding, User-Agent";
-        try_files $uri =404;
     }
     
     # API endpoints
@@ -57,41 +31,27 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
     }
 
-    # Frontend routes
+    # Frontend routes - Corregido para SSR
     location / {
-        try_files $uri $uri/ /index.csr.html;
-        add_header X-UA-Compatible "IE=edge";
-        add_header X-Content-Type-Options "nosniff";
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header Vary "Accept-Encoding, User-Agent";
-        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        try_files $uri $uri/index.html /index.csr.html;
+        add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     }
     
     # Bloquear acceso a archivos sensibles
-    location ~ \.env$ {
+    location ~ /\.(?!well-known) {
         deny all;
-        return 404;
     }
     
-    # Páginas de error
     error_page 404 /index.csr.html;
-    error_page 502 503 504 /50x.html;
+    error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
-    }
-    
-    # Configuración adicional para mejorar la seguridad
-    location ~ /\. {
-        deny all;
-        access_log off;
-        log_not_found off;
     }
 }
