--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
     "@angular/ssr": "^18.2.12",
     "@stripe/stripe-js": "^4.8.0",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "canvas-confetti": "^1.9.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "ngx-bootstrap": "^18.1.3",
-    "rxjs": "^7.8.1",
-    "three": "^0.177.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2",
-    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "ngx-bootstrap": "^18.1.3",
     "node-mailjet": "^6.0.5",
     "pg": "^8.12.0",
-    "stripe": "^17.0.0"
+    "rxjs": "^7.8.1",
+    "stripe": "^17.7.0",
+    "three": "^0.177.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.12",
