--- a/.github/workflows/deploy-modified.yml
+++ b/.github/workflows/deploy-modified.yml
@@ -25,20 +25,18 @@ jobs:
           username: root
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            echo "=== INICIO: DESPLIEGUE ATÓMICO ==="
+            echo "=== INICIO: DESPLIEGUE ATÓMICO (v2) ==="
 
             # 1. Navegar al directorio del proyecto
             cd /var/www/tienda-web-lotoAI-1 || exit 1
 
-            # 1.5. Respaldar archivos de configuración críticos
+            # (Mantenemos la lógica de backup y restauración de archivos)
             echo "--- Fase 1.5: Respaldando archivos de configuración ---"
-            # (Tu lógica de backup existente es buena, la mantenemos)
-            # ... (copia de .env, .env.production, etc.)
-            if [ -f ".env" ]; then cp .env .env.backup; echo "✅ .env respaldado"; fi
-            if [ -f ".env.production" ]; then cp .env.production .env.production.backup; echo "✅ .env.production respaldado"; fi
-            if [ -f "src/assets/botes.json" ]; then cp src/assets/botes.json src/assets/botes.json.backup; echo "✅ botes.json respaldado"; fi
-            if [ -f "src/assets/lottery-data.json" ]; then cp src/assets/lottery-data.json src/assets/lottery-data.json.backup; echo "✅ lottery-data.json respaldado"; fi
-
+            if [ -f ".env" ]; then cp .env .env.backup; fi
+            if [ -f ".env.production" ]; then cp .env.production .env.production.backup; fi
+            if [ -f "src/assets/botes.json" ]; then cp src/assets/botes.json src/assets/botes.json.backup; fi
+            if [ -f "src/assets/lottery-data.json" ]; then cp src/assets/lottery-data.json src/assets/lottery-data.json.backup; fi
+            echo "✅ Backups de configuración creados."
 
             # 2. Actualizar desde GitHub
             echo "--- Fase 2: Actualizando código fuente ---"
@@ -48,21 +46,20 @@ jobs:
 
             # 2.5. Restaurar archivos de configuración
             echo "--- Fase 2.5: Restaurando archivos de configuración ---"
-            # (Tu lógica de restauración es buena, la mantenemos)
-            if [ -f ".env.backup" ]; then mv .env.backup .env; echo "✅ .env restaurado"; fi
-            if [ -f ".env.production.backup" ]; then mv .env.production.backup .env.production; echo "✅ .env.production restaurado"; fi
-            if [ -f "src/assets/botes.json.backup" ]; then mv src/assets/botes.json.backup src/assets/botes.json; echo "✅ botes.json restaurado"; fi
-            if [ -f "src/assets/lottery-data.json.backup" ]; then mv src/assets/lottery-data.json.backup src/assets/lottery-data.json; echo "✅ lottery-data.json restaurado"; fi
+            if [ -f ".env.backup" ]; then mv .env.backup .env; fi
+            if [ -f ".env.production.backup" ]; then mv .env.production.backup .env.production; fi
+            if [ -f "src/assets/botes.json.backup" ]; then mv src/assets/botes.json.backup src/assets/botes.json; fi
+            if [ -f "src/assets/lottery-data.json.backup" ]; then mv src/assets/lottery-data.json.backup src/assets/lottery-data.json; fi
+            echo "✅ Archivos de configuración restaurados."
 
             # 4. Instalar dependencias
             echo "--- Fase 4: Instalando dependencias ---"
             npm install --production=false
 
-            # 6. Compilar el Backend (TSC)
+            # 6. Compilar el Backend
             echo "--- Fase 6: Compilando Backend ---"
             cd src/backend
-            npm install
-            npm run build
+            npm install && npm run build
             cd /var/www/tienda-web-lotoAI-1
             if [ ! -f "src/backend/dist/index.js" ]; then
               echo "❌ Error de compilación en el Backend. Abortando."
@@ -72,66 +69,73 @@ jobs:
 
             # 7. Compilar el Frontend en un directorio temporal
             echo "--- Fase 7: Compilando Frontend (Build Atómico) ---"
-            # Aumentar memoria swap
             sudo fallocate -l 2G /swapfile || true
             sudo chmod 600 /swapfile || true
             sudo mkswap /swapfile || true
             sudo swapon /swapfile || true
-
-            # Compilar en un directorio temporal 'dist_new'
+            
             NODE_OPTIONS="--max-old-space-size=4096" npx ng build --configuration=production --output-path=dist_new
             if [ $? -ne 0 ]; then
               echo "❌ Error de compilación en el Frontend. Abortando."
-              sudo swapoff /swapfile || true
-              sudo rm /swapfile || true
+              sudo swapoff /swapfile && sudo rm /swapfile
               exit 1
             fi
             echo "✅ Frontend compilado en 'dist_new'."
+            
+            sudo swapoff /swapfile && sudo rm /swapfile
 
-            # Limpiar swap
-            sudo swapoff /swapfile || true
-            sudo rm /swapfile || true
-
-            # 8. Reemplazo Atómico y Reinicio de PM2
+            # 8. Reemplazo Atómico y Reinicio de PM2 (Método Robusto)
             echo "--- Fase 8: Reemplazo Atómico y Reinicio de Servicios ---"
             
-            # Parar SOLO el frontend para evitar conflictos
-            pm2 stop frontend || echo "Frontend no estaba corriendo."
-
-            # El reemplazo atómico
-            rm -rf dist  # Eliminar el directorio antiguo
-            mv dist_new dist # Mover el nuevo a su lugar (operación instantánea)
-            echo "✅ Directorio 'dist' reemplazado atómicamente."
-
-            # Reiniciar todos los servicios
-            pm2 restart all --env production
+            # El reemplazo atómico: se hace ANTES de tocar PM2
+            rm -rf dist_old && echo "🧹 Limpiado backup antiguo."
+            if [ -d "dist" ]; then
+              mv dist dist_old
+              echo "✅ Directorio 'dist' actual renombrado a 'dist_old'."
+            fi
+            mv dist_new dist
+            echo "✅ Nuevo build 'dist_new' renombrado a 'dist'."
+            
+            # Ahora, reiniciar PM2 de forma agresiva como en el script original
+            echo "--- Limpiando y reiniciando servicios con PM2 ---"
+            pm2 stop all || echo "No había procesos corriendo."
+            pm2 delete all || echo "No había procesos para eliminar."
+            pm2 save --force
+            
+            # Liberar puertos por si acaso
+            fuser -k 3000/tcp 2>/dev/null || true
+            fuser -k 4000/tcp 2>/dev/null || true
+            fuser -k 5000/tcp 2>/dev/null || true
+            sleep 2
+            
+            # Iniciar de nuevo desde el ecosystem file (el método correcto)
+            echo "--- Iniciando servicios con la nueva configuración ---"
+            pm2 start ecosystem.config.js --env production
             pm2 save
             
-            echo "✅ Servicios reiniciados con la nueva versión."
+            # Limpiar el directorio antiguo en segundo plano
+            rm -rf dist_old &
 
             # 8.5. Verificación Post-Reinicio
             echo "--- Fase 8.5: Verificando estado de PM2 ---"
             sleep 8
             pm2 status
-            netstat -tuln | grep -E ':3000|:4000|:5000' || echo "⚠️  Algunos puertos no parecen estar activos."
+            netstat -tuln | grep -E ':3000|:4000|:5000'
             
-            echo "--- Logs recientes del frontend ---"
-            timeout 10 pm2 logs frontend --lines 15 || echo "Timeout en logs frontend, continuando..."
-
-            # 9. Actualizar y recargar NGINX (sin cambios)
+            # 9. Actualizar y recargar NGINX
             echo "--- Fase 9: Actualizando configuración de NGINX ---"
             cp nginx.conf /etc/nginx/sites-available/loto-ia.com
             ln -sf /etc/nginx/sites-available/loto-ia.com /etc/nginx/sites-enabled/
             nginx -t
             if [ $? -eq 0 ]; then
-              echo "✅ Sintaxis de NGINX correcta. Recargando..."
               systemctl reload nginx
+              echo "✅ NGINX recargado."
             else
-              echo "❌ Error de sintaxis en nginx.conf. No se recargará NGINX."
+              echo "❌ Error de sintaxis en nginx.conf."
               exit 1
             fi
 
-            echo "✅ FIN: DESPLIEGUE ATÓMICO COMPLETADO CON ÉXITO"
+            echo "✅ FIN: DESPLIEGUE ATÓMICO (v2) COMPLETADO CON ÉXITO"
 
       - name: Deployment success notification
         if: success()
